SDKs/twilio.com/twilio_studio_v1/1.37.4/java/USAGE.md
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateEngagementRequest req = new CreateEngagementRequest() {{
                security = new CreateEngagementSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new CreateEngagementPathParams() {{
                    flowSid = "voluptatibus";
                }};
                request = new CreateEngagementCreateEngagementRequest() {{
                    from = "maiores";
                    parameters = "consectetur";
                    to = "modi";
                }};
            }};

            CreateEngagementResponse res = sdk.createEngagement(req);

            if (res.studioV1FlowEngagement.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->